init ha